@@ -334,6 +334,24 @@ void handleOnStatus(
 
 }
 
+// Build transaction for removing unattended servers from health monitoring
+query_t arangodb::consensus::removeTransactionBuilder(
+  std::vector<std::string> const& todelete) {
+  
+  query_t del = std::make_shared<Builder>();
+  { VPackArrayBuilder trxs(del.get());
+    { VPackArrayBuilder trx(del.get());
+      { VPackObjectBuilder server(del.get());
+        for (auto const& srv : todelete) {
+          del->add(
+            VPackValue(Supervision::agencyPrefix() +
+                       arangodb::consensus::healthPrefix + srv));
+          { VPackObjectBuilder oper(del.get());
+            del->add("op", VPackValue("delete")); }}}}}
+  return del;
+  
+}
+
 // Check all DB servers, guarded above doChecks
 std::vector<check_t> Supervision::check(std::string const& type) {
 
@@ -358,17 +376,9 @@ std::vector<check_t> Supervision::check(std::string const& type) {
         todelete.begin(), todelete.end(), machine.first), todelete.end());
   }
   if (!todelete.empty()) {
-    query_t del = std::make_shared<Builder>();
-      { VPackArrayBuilder trxs(del.get());
-        { VPackArrayBuilder trx(del.get());
-          for (auto const& srv : todelete) {
-            { VPackObjectBuilder server(del.get());
-              del->add(VPackValue(_agencyPrefix + healthPrefix + srv));
-              { VPackObjectBuilder oper(del.get());
-                del->add("op", VPackValue("delete")); }}}}}
-    _agent->write(del);
+    _agent->write(removeTransactionBuilder(todelete));
   }
-
+  
   // Do actual monitoring
   for (auto const& machine : machinesPlanned) {
     std::string lastHeartbeatStatus, lastHeartbeatAcked, lastHeartbeatTime,
