@@ -43,6 +43,8 @@ v3.2.12 (XXXX-XX-XX)
   bits is lower than before, allowing each shard to store more data and cause
   less evictions from block cache
 
+* fix internal bug #1726: supervision failed to remove multiple
+  removed servers from health UI
 
 v3.2.11 (2018-01-17)
 --------------------
